syntax = "proto3";

package hrm;

message Point3D {
  float x = 1;
  float y = 2;
  float z = 3;
}

message Point4D {
  float x = 1;
  float y = 2;
  float z = 3;
  float w = 4;
}

message Point3DArray {
    repeated Point3D points = 1;
}

message Point4DArray {
    repeated Point4D points = 1;
}